Removed usless usless tests, and add a whole bunch of chit! Too hung over to remember what I did 10 mins ago :( BACON!

--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,8 @@
 		});
 	</script>
 	<script src="tests/global.js"></script>
+	<script src="tests/view.js"></script>
+	<script src="tests/model.js"></script>
 	<script>
 		window.onload = function () {
 			mocha.run({
