--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
 	<title>Gelatin.js tests</title>
 	<link rel="stylesheet" href="vendor/mocha.css" type="text/css" media="screen" charset="utf-8">
 	<script src="vendor/mootools-core-1.4.5.js"></script>
-	<script src="../gelatin.js"></script>
+	<script src="../dist/gelatin-0.0.1.js"></script>
 	<script src="vendor/mocha.js"></script>
 	<script src="vendor/chai.js"></script>
 	<script>
