Added store tests

--- a/test/index.html
+++ b/test/index.html
@@ -23,8 +23,10 @@
 	<script src="tests/core/computed-properties.js"></script>
 	<script src="tests/core/observers.js"></script>
 	<script src="tests/core/object.js"></script>
+	<script src="tests/core/bindings.js"></script>
 
 	<script src="tests/data/model.js"></script>
+	<script src="tests/data/store.js"></script>
 
 	<script>
 		window.onload = function () {
