Added inital router and history classes and broke model testing out into its own file

--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,8 @@
 	<script src="tests/data/model.js"></script>
 	<script src="tests/data/store.js"></script>
 
+	<script src="tests/router/router.js"></script>
+
 	<script>
 		window.onload = function () {
 			mocha.run({
