Updated tests max timeout to be 500ms

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,8 @@
 	<script>
 		mocha.setup({
 			ui: 'bdd',
-			ignoreLeaks: true
+			ignoreLeaks: true,
+			timeout: 500
 		});
 		
 		var expect = chai.expect;
